force-app/main/default/objects/Contact_Upload_Detail__c/Contact_Upload_Detail__c.object-meta.xml
<CustomObject>
    <description>This is the record-level detail of a contact upload file. It's used to search for contact (create if not found), then add them to a subscription used by the Subscription Center and Marketing Cloud email sends.</description>
    <label>Contact Upload Detail</label>
    <nameField>
        <displayFormat>CUD-{0000000}</displayFormat>
        <label>Contact Upload Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Upload Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>