force-app/main/default/objects/Contact_Upload_Detail__c/fields/ASURITE__c.field-meta.xml
<CustomField>
    <fullName>ASURITE__c</fullName>
    <label>ASURITE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>