force-app/main/default/objects/Contact_Upload_Detail__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Birthdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>