force-app/main/default/objects/Contact_Upload_Detail__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contact Upload Details</relationshipLabel>
    <relationshipName>Contact_Upload_Details</relationshipName>
    <type>Lookup</type>
</CustomField>