force-app/main/default/objects/Contact_Upload_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Upload Details</relationshipLabel>
    <relationshipName>Contact_Upload_Details</relationshipName>
    <type>Lookup</type>
</CustomField>