force-app/main/default/objects/Contact_Upload_Detail__c/fields/Contact_Upload__c.field-meta.xml
<CustomField>
    <fullName>Contact_Upload__c</fullName>
    <label>Contact Upload</label>
    <referenceTo>Contact_Upload__c</referenceTo>
    <relationshipLabel>Contact Upload Details</relationshipLabel>
    <relationshipName>Contact_Upload_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>