force-app/main/default/objects/Contact_Upload_Detail__c/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <label>EMPLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>