force-app/main/default/objects/Contact_Upload_Detail__c/fields/Processing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Processing_Notes__c</fullName>
    <label>Processing Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>