force-app/main/default/objects/Contact_Upload_Detail__c/fields/Source_Line__c.field-meta.xml
<CustomField>
    <fullName>Source_Line__c</fullName>
    <label>Source Line</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>