force-app/main/default/objects/Contact_Upload_Detail__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriber</label>
    <referenceTo>Subscriber__c</referenceTo>
    <relationshipLabel>Contact Upload Details</relationshipLabel>
    <relationshipName>Contact_Upload_Details</relationshipName>
    <type>Lookup</type>
</CustomField>