force-app/main/default/objects/Contact_Upload_Detail__c/fields/Subscriber_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Status__c</fullName>
    <label>Subscriber Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>