force-app/main/default/objects/Contact_Upload_Detail__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Contact Upload Details</relationshipLabel>
    <relationshipName>Contact_Upload_Details</relationshipName>
    <type>Lookup</type>
</CustomField>